# Cafe.Encoding

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  conanfile.py
Base/: CMakeLists.txt
Base/include/Cafe/Encoding/: CodePage.h  Encode.h  Strings.h
Base/include/Encoding/: CodePage.h  CodePointIterator.h  Encode.h  Strings.h
Base/src/Cafe/Encoding/: CodePage.h  Encode.h  Strings.h
GB2312/: CMakeLists.txt
GB2312/include/Cafe/Encoding/CodePage/: GB2312.h
GB2312/src/Cafe/Encoding/CodePage/: GB2312.h
GB2312/src/Cafe/Encoding/CodePage/Impl/: GB2312Impl.h
RuntimeEncoding/: CMakeLists.txt
RuntimeEncoding/cmake/: IncludedEncoding.h.in
RuntimeEncoding/include/Cafe/Encoding/: RuntimeEncoding.h
RuntimeEncoding/include/Encoding/: RuntimeEncoding.h
RuntimeEncoding/src/: RuntimeEncoding.cpp
RuntimeEncoding/src/Cafe/Encoding/: RuntimeEncoding.cpp  RuntimeEncoding.h
Test/: CMakeLists.txt  Encoder.Test.cpp  GB2312.Test.cpp  RuntimeEncoding.Test.cpp  String.Test.cpp  UTF-16.Test.cpp  UTF-32.Test.cpp  UTF-8.Test.cpp  UnicodeData.Test.cpp
UTF-16/: CMakeLists.txt
UTF-16/include/Cafe/Encoding/CodePage/: UTF-16.h
UTF-16/include/Encoding/CodePage/: UTF-16.h
UTF-16/src/Cafe/Encoding/CodePage/: UTF-16.h
UTF-32/: CMakeLists.txt
UTF-32/include/Cafe/Encoding/CodePage/: UTF-32.h
UTF-32/include/Encoding/CodePage/: UTF-32.h
UTF-32/src/Cafe/Encoding/CodePage/: UTF-32.h
UTF-8/: CMakeLists.txt
UTF-8/include/Cafe/Encoding/CodePage/: UTF-8.h
UTF-8/include/Encoding/CodePage/: UTF-8.h
UTF-8/src/Cafe/Encoding/CodePage/: UTF-8.h
UnicodeData/: CMakeLists.txt
UnicodeData/include/Cafe/Encoding/: RuntimeUnicodeData.h  UnicodeDataTypes.h
UnicodeData/include/Encoding/: RuntimeUnicodeData.h  UnicodeData.h
UnicodeData/src/Cafe/Encoding/: RuntimeUnicodeData.cpp  RuntimeUnicodeData.h  UnicodeData.h  UnicodeDataTypes.h
UnicodeData/src/Cafe/Encoding/Impl/: UnicodeData.h
UnicodeData/src/Encoding/: RuntimeUnicodeData.cpp
UnicodeData/tools/: UnicodeDataTool.cpp
